[package]
name = "github-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
http = "0.2.8"
hyperpolyglot = "0.1.7"
octocrab = "0.17.0"
plotters = "0.3.4"
reqwest = { version = "0.11.13", features = ["json"] }
resvg = "0.26.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
tempfile = "3.3.0"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-attributes = "0.1.23"
tracing-subscriber = "0.3.16"
